--- a/templates/se_values.html
+++ b/templates/se_values.html
@@ -308,8 +308,16 @@
 
         function loadDemo(caseType) {
             const benign = {
-                radius_se: 0.3345, texture_se: 1.281, perimeter_se: 2.25, area_se: 25.22, smoothness_se: 0.005356,
-                compactness_se: 0.03086, concavity_se: 0.04079, concave_points_se: 0.01366, symmetry_se: 0.02185, fractal_dimension_se: 0.004973
+                radius_se: 0.334500,
+                texture_se: 1.281000,
+                perimeter_se: 2.250000,
+                area_se: 25.220000,
+                smoothness_se: 0.005356,
+                compactness_se: 0.030860,
+                concavity_se: 0.040790,
+                concave_points_se: 0.013660,
+                symmetry_se: 0.021850,
+                fractal_dimension_se: 0.004973
             };
 
             const malignant = {
