--- a/templates/worst_values.html
+++ b/templates/worst_values.html
@@ -308,8 +308,16 @@
 
         function loadDemo(caseType) {
             const benign = {
-                radius_worst: 14.5, texture_worst: 20.49, perimeter_worst: 96.09, area_worst: 641.2, smoothness_worst: 0.164,
-                compactness_worst: 0.6242, concavity_worst: 0.6922, concave_points_worst: 0.1785, symmetry_worst: 0.4233, fractal_dimension_worst: 0.1179
+                radius_worst: 14.500000,
+                texture_worst: 20.490000,
+                perimeter_worst: 96.090000,
+                area_worst: 641.200000,
+                smoothness_worst: 0.164000,
+                compactness_worst: 0.624200,
+                concavity_worst: 0.692200,
+                concave_points_worst: 0.178500,
+                symmetry_worst: 0.423300,
+                fractal_dimension_worst: 0.117900
             };
 
             const malignant = {
