--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
         </p>
 
 
-
+        <!--Button to enter the system-->
         <a href="{{ url_for('step_1') }}" class="cta-button">
             <i class="fas fa-play"></i> Get Started
         </a>
