--- a/templates/mean_values.html
+++ b/templates/mean_values.html
@@ -207,6 +207,7 @@
             </div>
         </div>
 
+        <!-- Step 1: Mean Values Input Form-->
         <div class="form-container">
             <div class="step-info">
                 <h3><i class="fas fa-info-circle"></i> Mean Values</h3>
@@ -285,6 +286,7 @@
     </div>
 
     <script>
+        // Function to generate random inputs within specified ranges
         function generateRandomInputs() {
             const ranges = {
                 radius_mean: [6, 28],
@@ -298,7 +300,7 @@
                 symmetry_mean: [0.1, 0.3],
                 fractal_dimension_mean: [0.05, 0.1]
             };
-        
+            // Iterate through each feature and set a random value within the specified range
             for (const feature in ranges) {
                 const [min, max] = ranges[feature];
                 const randomValue = (Math.random() * (max - min) + min).toFixed(6);
@@ -306,6 +308,7 @@
             }
         }
 
+        // Function to load demo values for benign or malignant cases
         function loadDemo(caseType) {
           const benign = {
             radius_mean: 13.540000,
@@ -333,10 +336,10 @@
             fractal_dimension_mean: 0.078710
           };
 
-          const data = caseType === 'malignant' ? malignant : benign;
+          const data = caseType === 'malignant' ? malignant : benign;   // Load benign or malignant data
 
           for (const field in data) {
-              document.getElementsByName(field)[0].value = data[field];
+              document.getElementsByName(field)[0].value = data[field]; // Set the input value to the corresponding demo value
           }
         }
     </script>
